# ActionPad

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  KDE_STORE_GUIDE.md  LICENSE  README.md  TESTING_CHECKLIST.md  build-and-install.sh  create-package.sh  install.sh  validate.sh
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  EXAMPLES.md  INDEX.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/images/: README.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/scripts/: execute-command.sh
package/contents/ui/: CommandRunner.qml  configGeneral.qml  main.qml
plugin/: actionpadplugin.cpp  actionpadplugin.h  commandexecutor.cpp  commandexecutor.h  qmldir
